# claude-vibe

./: CLAUDE.md  Cargo.toml  Dockerfile  vibe.bash
.claude/: settings.local.json
src/: docker.rs  git.rs  main.rs  style.rs  tui.rs
src/commands/: cleanup.rs  clone.rs  continue_session.rs  mod.rs  new.rs  setup.rs  status.rs
