[package]
name = "vibe"
version = "0.1.0"
edition = "2024"
description = "Claude Code session manager with git worktrees"
authors = ["Artiom Tretjakovas <hi@sirse.dev>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rand = "0.9"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
