[package]
name = "vibe"
version = "0.1.0"
edition = "2024"
description = "Claude Code session manager with git worktrees"
authors = ["Artiom Tretjakovas <hi@sirse.dev>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3"
terminal_size = "0.4"
nix = { version = "0.29", features = ["user"] }

[lints.rust]
unsafe_code = "forbid"
